--- a/src/ui/components/styles.css
+++ b/src/ui/components/styles.css
@@ -90,8 +90,25 @@
 
 .flashcard-source {
     position: absolute;
-    bottom: 15px;
-    left: 15px;
-    font-size: 0.8em;
-    color: #666;
+    bottom: 10px;
+    right: 10px;
+    font-size: .9em;
+    padding: 0px 2px;
+    background-color: rgba(47, 0, 255, 0.1);
+    border-radius: 6px;
+    border: 1px solid #0694ed;
+    transition: all 0.3s ease;
+}
+
+.flashcard-source a {
+    color: #0059ff;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.flashcard-source:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 2px 5px rgba(21, 0, 255, 0.2);
 }
